HDFS-1938. Fix ivy-retrieve-hdfs dependence in build.xml and aop.xml.  Contributed by Eric Yang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102938 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -407,7 +407,7 @@
     </jar>
   </target>
 
-  <target name="compile-hdfs-test" depends="compile-hdfs-classes, ivy-retrieve-test">
+  <target name="compile-hdfs-test" depends="compile-hdfs-classes, ivy-retrieve-hdfs, ivy-retrieve-test">
     <macro-compile-hdfs-test
       target.dir="${test.hdfs.build.classes}"
       source.dir="${test.src.dir}/hdfs;${test.src.dir}/unit"
