--- a/src/packages/deb/hadoop.control/control
+++ b/src/packages/deb/hadoop.control/control
@@ -1,5 +1,3 @@
-#!/usr/bin/env bash
-
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
@@ -14,21 +12,13 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# included in all the hdfs scripts with source command
-# should not be executed directly
-
-bin=`which "$0"`
-bin=`dirname "${bin}"`
-bin=`cd "$bin"; pwd`
-
-export HADOOP_PREFIX="${HADOOP_PREFIX:-$bin/..}"
-
-if [ -d "$bin" ]; then
-  . $bin/../libexec/hadoop-config.sh
-elif [ -e "${HADOOP_HDFS_HOME}"/bin/hadoop-config.sh ]; then
-  . "$HADOOP_HDFS_HOME"/bin/hadoop-config.sh
-else
-  echo "Hadoop common not found."
-  exit
-fi
+Package: hadoop-hdfs
+Version: @version@
+Section: misc
+Priority: optional
+Provides: hadoop-hdfs
+Architecture: all
+Depends: openjdk-6-jre-headless, hadoop-common
+Maintainer: Apache Software Foundation <general@hadoop.apache.org>
+Description: The Apache Hadoop project develops open-source software for reliable, scalable, distributed computing.
+Distribution: development
