--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -42,6 +42,7 @@ hsqldb.version=1.8.0.10
 ivy.version=2.1.0
 
 jasper.version=5.5.12
+jdeb.version=0.8
 jsp.version=2.1
 jsp-api.version=5.5.12
 jetty.version=6.1.14
