MAPREDUCE-2559. ant binary fails due to missing c++ lib dir. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1133226 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1308,13 +1308,15 @@
     </copy> -->
 
     <copy todir="${dist.dir}/include" includeEmptyDirs="false">
-      <fileset dir="${build.dir}/c++/${build.platform}/include">
+      <fileset dir="${build.dir}/c++/${build.platform}/include" 
+               erroronmissingdir="false">
         <include name="**"/>
       </fileset>
     </copy>
 
     <copy todir="${dist.dir}/lib" includeEmptyDirs="false">
-      <fileset dir="${build.dir}/c++/${build.platform}/lib">
+      <fileset dir="${build.dir}/c++/${build.platform}/lib"
+               erroronmissingdir="false">
         <include name="**"/>
       </fileset>
     </copy>
