--- a/hadoop-dist/pom.xml
+++ b/hadoop-dist/pom.xml
@@ -76,6 +76,9 @@
       <id>dist</id>
       <activation>
         <activeByDefault>false</activeByDefault>
+        <property>
+          <name>tar|rpm|deb</name>
+        </property>
       </activation>
       <build>
         <plugins>
@@ -114,15 +117,6 @@
                       run cp -r $ROOT/hadoop-hdfs-project/hadoop-hdfs/target/hadoop-hdfs-${project.version}/* .
                       run cp -r $ROOT/hadoop-hdfs-project/hadoop-hdfs-httpfs/target/hadoop-hdfs-httpfs-${project.version}/* .
                       run cp -r $ROOT/hadoop-mapreduce-project/target/hadoop-mapreduce-${project.version}/* .
-                      COMMON_LIB=share/hadoop/common/lib
-                      MODULES=../../../../modules
-                      run ln -s $MODULES/hadoop-mapreduce-client-app-${project.version}.jar $COMMON_LIB
-                      run ln -s $MODULES/hadoop-yarn-api-${project.version}.jar $COMMON_LIB
-                      run ln -s $MODULES/hadoop-mapreduce-client-common-${project.version}.jar $COMMON_LIB
-                      run ln -s $MODULES/hadoop-yarn-common-${project.version}.jar $COMMON_LIB
-                      run ln -s $MODULES/hadoop-mapreduce-client-core-${project.version}.jar $COMMON_LIB
-                      run ln -s $MODULES/hadoop-yarn-server-common-${project.version}.jar $COMMON_LIB
-                      run ln -s $MODULES/hadoop-mapreduce-client-jobclient-${project.version}.jar $COMMON_LIB
                       echo
                       echo "Hadoop dist layout available at: ${project.build.directory}/hadoop-${project.version}"
                       echo
