--- a/hadoop-common-project/hadoop-common/src/main/conf/log4j.properties
+++ b/hadoop-common-project/hadoop-common/src/main/conf/log4j.properties
@@ -19,6 +19,9 @@ log4j.rootLogger=${hadoop.root.logger}, EventCounter
 # Logging Threshold
 log4j.threshold=ALL
 
+# Null Appender
+log4j.appender.NullAppender=org.apache.log4j.varia.NullAppender
+
 #
 # Daily Rolling File Appender
 #
