MAPREDUCE-3735. Add distcp jar to the distribution (tar). (mahadev) - Merging r1236336 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1236337 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -225,6 +225,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-distcp</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-rumen</artifactId>
         <version>${project.version}</version>
       </dependency>
