--- a/hadoop-tools/hadoop-distcp/pom.xml
+++ b/hadoop-tools/hadoop-distcp/pom.xml
@@ -20,7 +20,7 @@
     <version>0.23.1-SNAPSHOT</version>
     <relativePath>../../hadoop-project</relativePath>
   </parent>
-  <groupId>org.apache.hadoop.tools</groupId>
+  <groupId>org.apache.hadoop</groupId>
   <artifactId>hadoop-distcp</artifactId>
   <version>0.23.1-SNAPSHOT</version>
   <description>Apache Hadoop Distributed Copy</description>
